Helper endpoints
Basic as helper endpoints e.g. /offences, /areas, /ages, /genders, /years
