# server-side/docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "CrimeWatch!",
-        "description": "This is an Express API based on the Queensland crime data.",
+        "title": "CAB230: Web Computing API",
+        "description": "An Express API by Shannon Stephens, N10205144",
         "version": "1.0.0",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
@@ -17,26 +17,132 @@
         "url": "http://localhost:3000"
     }],
     "tags": [{
-        "name": "authentication",
-        "description": "Login and Registration to the API (to be implemented)." 
+        "name": "Authentication",
+        "description": "(to be implemented)." 
     }, {
-        "name": "search",
-        "description": "Authenticated endpoint for specific crime data (to be implemented)."
+        "name": "Search",
+        "description": "(to be implemented)."
     }, {
-        "name": "helpers",
-        "description": "Non-autheticated endpoints for categorical data (to be implemented)."
+        "name": "Helpers",
+        "description": "(to be implemented)."
     }],
     "paths": {
-        "/": {
+        "/register": {
             "get": {
-                "tags": ["helpers"],
-                "summary": "Simple information page",
-                "description": "Very basic API home page promising more information",
-                "operationId": "apiHome",
-                "produces": ["text/html"],
+                "tags": ["Authentication"],
+                "summary":"Registers a new user account",
+                "description": "This is your starting point.",
+                "operationId": "register",
+                "produces": ["application/json"],
                 "responses": {
                     "200": {
-                        "description": "successful operation"
+                        "description": "Created"
+                    },
+                    "400":{
+                        "description": "Bad request"
+                    }
+                }
+            }
+        },
+        "/login": {
+            "get": {
+                "tags": ["Authentication"],
+                "summary":"Login with an existing user account",
+                "operationId": "login",
+                "produces": ["application/json"],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description":"Unauthorised"
+                    }
+                }
+            }
+        },
+        "/search": {
+            "get": {
+                "tags": ["Search"],
+                "description": "Seach for Offence data",
+                "operationId": "search",
+                "produces": ["application/json"],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "401": {
+                        "description": "Unauthorised"
+                    }
+                }
+            }
+        },
+        "/offences": {
+            "get": {
+                "tags": ["Helpers"],
+                "description":"List of offences to perform searches for",
+                "operationId:":"getOffences",
+                "produces":["application/json"],
+                "responses": {
+                    "200": {
+                        "description":"OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/areas": {
+            "get": {
+                "tags": ["Helpers"],
+                "description": "List of Areas to filter search results by",
+                "operationId": "areas",
+                "produces": ["application/json"],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/ages": {
+            "get": {
+                "tags": ["Helpers"],
+                "description": "List of Ages to filter search results by",
+                "operationId": "ages",
+                "produces": ["application/json"],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/genders": {
+            "get": {
+                "tags": ["Helpers"],
+                "description": "List of genders to filter search results by",
+                "operationId": "genders",
+                "produces": ["application/json"],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/years": {
+            "get": {
+                "tags": ["Helpers"],
+                "description": "List of Years to filter search results by",
+                "operationId": "years",
+                "produces": ["application/json"],
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     }
                 }
             }
