# server-side/routes/helpers.js
@@ -7,58 +7,94 @@ router.get('/', function (req, res, next) {
   res.render('index', { title: 'My own self induced suffering' });
 });
 
-router.get("/offences", function (req, res, next) {
-  // var query = "SELECT name, district FROM ??";
-  // var table = ["city"];
-  // query = mysql.format(query, table);
-  // req.db.query(query, function (err, rows) {
-  //   if (err) {
-  //     res.json({
-  //       "Error": true,
-  //       "Message": "Error executing MySQL query"
-  //     });
-  //   } else {
-  //     res.json({
-  //       "Error": false,
-  //       "Message": "Success",
-  //       "City": rows
-  //     });
-  //   }
-  // });
-  res.render('index', { title: 'Offences' });
+router.get("/offences", function (req, res, next) { //FIXME: format correctly; currently as 'pretty':'offence' when i think it should all be one big lump of json
+  req.db.from('offence_columns').select('pretty')
+    .then((rows) => {
+      res.json({
+        "Error": false,
+        "Message": "Success",
+        "Offences": rows
+      })
+    })
+    .catch((err) => {
+      console.log(err);
+      res.json({
+        "Error": true,
+        "Message": "Error in MySQL query"
+      });
+    })
 });
 
-router.get("/area", function (req, res, next) {
-  // var query = "SELECT * FROM ?? WHERE ??=?";
-  // var table = ["city", "CountryCode", req.params.CountryCode];
-  // query = mysql.format(query, table);
-  // req.db.query(query, function (err, rows) {
-  //   if (err) {
-  //     res.json({
-  //       "Error": true,
-  //       "Message": "Error executing MySQL query"
-  //     });
-  //   } else {
-  //     res.json({
-  //       "Error": false,
-  //       "Message": "Success",
-  //       "Cities": rows
-  //     });
-  //   }
-  // });
-  res.render('index', { title: 'Area' });
+router.get("/areas", function (req, res, next) { //FIXME: same as offences
+  req.db.from('areas').select('area')
+    .then((rows) => {
+      res.json({
+        "Error": false,
+        "Message": "Success",
+        "Areas": rows
+      })
+    })
+    .catch((err) => {
+      console.log(err);
+      res.json({
+        "Error": true,
+        "Message": "Error in MySQL query"
+      })
+    })
 });
 
-router.get("/ages", function (req, res, next) {
-  res.render('index', { title: 'Ages' });
+router.get("/ages", function (req, res, next) { //FIXME: same as offence
+  req.db.from('offences').select('age').distinct()
+  .then((rows) => {
+    res.json({
+      "Error": false,
+      "Message": "Success",
+      "Ages": rows
+    })
+  })
+  .catch((err) => {
+    console.log(err);
+    res.json({
+      "Error": true,
+      "Message": "Error in MySQL query"
+    })
+  })
 });
 
-router.get("/genders", function (req, res, next) {
-  res.render('index', { title: 'Genders' });
+router.get("/genders", function (req, res, next) { //FIXME: same as offence
+  req.db.from('offences').select('gender').distinct()
+  .then((rows) => {
+    res.json({
+      "Error": false,
+      "Message": "Success",
+      "Ages": rows
+    })
+  })
+  .catch((err) => {
+    console.log(err);
+    res.json({
+      "Error": true,
+      "Message": "Error in MySQL query"
+    })
+  })
 });
 
-router.get("/years", function (req, res, next) {
-  res.render('index', { title: 'Years' });
+router.get("/years", function (req, res, next) { //FIXME: same as offence
+  req.db.from('offences').select('year').distinct()
+  .then((rows) => {
+    res.json({
+      "Error": false,
+      "Message": "Success",
+      "Ages": rows
+    })
+  })
+  .catch((err) => {
+    console.log(err);
+    res.json({
+      "Error": true,
+      "Message": "Error in MySQL query"
+    })
+  })
 });
 
 
